<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tb3_yolo_bringup</name>
  <version>0.0.0</version>
  <description>Answers at https://www.youtube.com/watch?v=dQw4w9WgXcQ</description>
  <maintainer email="lai.yankai@gmail.com">Lai Yan Kai</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>tb3_yolo_capture</exec_depend>
  <exec_depend>tb3_yolo_mapper</exec_depend>
  <exec_depend>tb3_yolo_planner</exec_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>